--- a/mysite/Webpage/static/css/main.css
+++ b/mysite/Webpage/static/css/main.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #060;
+  color: rgb(102, 0, 0);
 }
 
 /*
@@ -10,7 +10,7 @@ body {
  */
 
 header {
-  background-color: #DFB887;
+  background-color: #400ec9;
   height: 35px;
   width: 100%;
   opacity: .9;
@@ -20,13 +20,13 @@ header {
 header h1.logo {
   margin: 0;
   font-size: 1.7em;
-  color: #fff;
+  color: #333;
   text-transform: uppercase;
   float: left;
 }
 
 header h1.logo:hover {
-  color: #fff;
+  color: rgb(74, 19, 226);
   text-decoration: none;
 }
 
@@ -41,7 +41,7 @@ header h1.logo:hover {
 
 div.home {
   padding: 10px 0 30px 0;
-  background-color: #E6E6FA;
+  background-color: #0808f1;
   -webkit-border-radius: 6px;
      -moz-border-radius: 6px;
           border-radius: 6px;
@@ -49,7 +49,7 @@ div.home {
 
 div.about {
   padding: 10px 0 30px 0;
-  background-color: #E6E6FA;
+  background-color: #0202e6;
   -webkit-border-radius: 6px;
      -moz-border-radius: 6px;
           border-radius: 6px;
@@ -68,7 +68,7 @@ h3 {
   margin-top: 30px;
   text-align: center;
   letter-spacing: -1px;
-  color: #999;
+  color: rgb(231, 10, 10);
 }
 
 .menu {
@@ -85,6 +85,6 @@ h3 {
 }
 
 .menu li a {
-  color: #444;
+  color: rgb(231, 13, 13);
   text-decoration: none;
 }
